--- a/Form-App/package.json
+++ b/Form-App/package.json
@@ -2,11 +2,21 @@
   "name": "form-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "dev": "node --watch server.js ",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.7.1",
+    "sequelize": "^6.35.2"
+  }
 }
