--- a/Form-Types-Español/config/.env.development
+++ b/Form-Types-Español/config/.env.development
@@ -3,8 +3,8 @@ HOST=localhost
 
 MYSQLHOST='127.0.0.1'
 MYSQLUSER='root'
-MYSQLDATABASE='testdb'
-MYSQLPASSWORD='admin'
+MYSQLDATABASE='test'
+MYSQLPASSWORD='root'
 MYSQLPORT='3306'
 
 LIMIT=5
